full upload 1st

--- a/Ecomsite/shop/templates/shop/index.html
+++ b/Ecomsite/shop/templates/shop/index.html
@@ -9,14 +9,19 @@
         <meta name="description" content="">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static "shop/stylee.css" %}">
+        
     
         <script
   src="https://code.jquery.com/jquery-3.7.1.js"
   integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
   crossorigin="anonymous"></script>
 
-    </head>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
+    
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="{% static "shop/stylee.css" %}">
+</head>
     <body>
         
         <div class='container'>
@@ -38,7 +43,9 @@
                                 <a class="nav-link" href="#">Features</a>
                               </li>
                               <li class="nav-item">
-                                <a id="cart" class="nav-link" href="#">Cart(0)</a>
+                                <button id="cart" type="button" class="btn .atc btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+                                    Cart(0)
+                                  </button>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -73,11 +80,8 @@
                     <div class='card'>
                         <img src="{{product.image}}" class='ccard-img-top'>
                         <div class='card-body'>
-                            <div class='card-title'>
-                                {{product.title}}
-                            </div>
-                            <div class='card-text'>
-                                {{product.price}}
+                            <div class='card-title' id="nm{{product.id}}">{{product.title}}</div>
+                            <div id="price{{product.id}}" class='card-text'>{{product.price}}
                             </div>
 
                             <a href="/{{product.id}}" class="btn btn-warning">View</a>
@@ -116,7 +120,11 @@
 
                 </div>
             </div>
-
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <a href="/checkout">
+                    <button class="btn btn-warning w-100" id="checkout">Checkout</button>
+                </a>
+            </div>
         </div>
 
         <script src="" async defer></script>
@@ -147,8 +155,7 @@
         console.log(cart);
         localStorage.setItem('cart',JSON.stringify(cart));
 
-        //pop up massage
-        //alert("Item added to cart")
+         //alert("Item added to cart")
     });
     
     </script> {% endcomment %}
@@ -166,10 +173,19 @@
         
         
         if (cart[item_id] != undefined){
-            cart[item_id] = cart[item_id] + 1;
+            quantity = cart[item_id][0] + 1;
+            cart[item_id][0] = quantity;
+            cart[item_id][2] = cart[item_id][2] + parseFloat(document.getElementById("price"+item_id).innerHTML);
+
         }
         else{
-            cart[item_id] = 1;
+            quantity = 1;
+            price = parseFloat(document.getElementById("price"+item_id).innerHTML);
+            name = document.getElementById('nm'+item_id).innerHTML;
+            cart[item_id]=[quantity,name,price]
+
+            console.log(name)
+
         }
         console.log(cart)
         localStorage.setItem('cart', JSON.stringify(cart));
@@ -177,7 +193,42 @@
         document.getElementById("cart").innerHTML = "Cart("+ Object.keys(cart).length +")";
         
     })
-    </script>
+
+    //update cart button & popover content 
+    {% comment %} function updateCartPopoverList(){
+        const cartButton = document.getElementById("cart");
+
+        //update cart count in button text/javascript
+
+        cartButton.innerHTML = 'Cart(${Object.keys(cart).length})';
+
+        //prepare content to show in popover
+        let content ="";
+        for (let id in cart){
+            const name = productNames[id] || "Unknown";
+            content += `${name} × ${cart[id]}<br>`;
+        }
+        if (content === "") {
+            content = "Your cart is empty";
+        }
+
+        // Update popover
+        let popover = bootstrap.Popover.getInstance(cartBtn);
+        if (popover) {
+            popover.dispose();
+        }
+        cartBtn.setAttribute("data-bs-content", content);
+        new bootstrap.Popover(cartBtn);
+    } {% endcomment %}
+
+
+    const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+    const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+    
+    //updateCartPopoverList();
+
+
+</script>
 
 
 </html>
